--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -37,5 +37,83 @@
     transform: scale(1.025);
     transition: 0.6s;
 }
-  /* Add any other styling as needed */
+  
+
+
+
+
+
+
+
+
+/* making responsive */
+
+@media(max-width:1240px){
+     .item{
+      font-size: 14px;
+      width: 200px;
+      height: 250px;
+     
+     }
+    .item img{
+      width: 200px;
+    }
+    .item-old-price{
+      font-size: 14px;
+    }
+    .item-new-price{
+      font-size: 14px;
+    }
+    
+
+}
+
+@media(max-width:1024px){
+  .item{
+    font-size: 13px;
+    width: 150px;
+    height: 200px;
+    margin: 10px;
+  }
+  .item img{
+    width: 150px;
+  }
+  .item-old-price{
+    font-size: 13px;
+  }
+  .item-new-price{
+    font-size: 13px;
+  }
+}
+
+
+@media(max-width:800px){
+  .item{
+    font-size: 12px;
+    width: 100px;
+    height: 150px;
+    margin: 10px;
+  }
+  .item img{
+    width: 100px;
+  }
+  .item-old-price{
+    font-size: 12px;
+  }
+  .item-new-price{
+    font-size: 12px;
+  }
+}
+
+@media(max-width:500px){
+  .item{
+    width: 140px;
+    height: 190px;
+    margin-top:50px;
+  }
+  .item img{
+    width: 140px;
+  }
+}
+
   
