--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,6 +4,7 @@
     padding: 15px;
     /* box-shadow: 0,1px,3px -2px rgb(137, 127, 127); */
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 5px;
+    align-items: center;
 }
 .nav-logo{
     display: flex;
@@ -80,4 +81,109 @@
     background: red;
     color: white;
 
+}
+.dropmenu-icon{
+    display: none;
+    opacity: 0;
+    
+}
+
+
+
+
+
+/* making responsive */
+
+@media(max-width:1280px){
+      .navbar{
+        padding: 15px 50px;
+      }
+      .nav-logo img{
+       width: 40px;
+        
+      }
+      .nav-logo p{
+        font-size: 25px;
+      }
+     .nav-menu{
+        gap: 25px;
+        font-size: 15px;
+
+     }
+     .nav-login-cart{
+        gap: 30px;
+     }
+     .nav-login-cart button{
+        width: 120px;
+        height: 40px;
+        font-size: 15px;
+     }
+     .nav-cart-count{
+        margin-left: -40px;
+        font-size: 12px;
+     }
+}
+
+@media(max-width:1024px){
+         .navbar{
+            padding: 12px 30px;
+         } 
+        .nav-menu{
+            gap: 20px;
+            font-size: 14px;
+        } 
+        .nav-login-cart button{
+          width: 90px;
+          height: 35px;
+          font-size: 14px;
+
+        }
+        .nav-login-cart img{
+            width: 30px;
+        }
+        .nav-cart-count{
+            width: 18px;
+            height: 18px;
+        }
+}
+
+@media(max-width:800px){
+    .navbar{
+        padding: 15px 0px;
+    }
+    .dropmenu-icon{
+        display: block;
+        opacity: 100;
+        cursor: pointer;
+        
+    }
+    .nav-menu{
+        display:none;
+        width: 100%;
+        height: 80px;
+        position: absolute;
+        justify-content: center;
+        background-color: white;
+        top: 50px;
+    }
+    .nav-menu-visible{
+        display: flex;
+    }
+}
+
+@media(max-width:500px){
+    .navbar{
+        padding: 8px 0px;
+        gap: 0;
+    }
+    .nav-logo{
+        transform: scale(0.8);
+    }
+    .nav-menu{
+        height: 70px;
+        top: 50px;
+    }
+    .nav-login-cart{
+        transform: scale(0.8);
+    }
 }
