--- a/src/Components/Offers/Offers.css
+++ b/src/Components/Offers/Offers.css
@@ -2,7 +2,7 @@
     width: 65%;
     height: 60vh;
     /* border: 1px solid black; */
-    margin: 200px auto;
+    margin:100px auto;
     display: flex;
     padding: 0px 140px;
     background: linear-gradient(180deg,#fde1ff,#e1ffea22 60%);
@@ -42,3 +42,6 @@ img{
     width: 100%;
     height: 100%;
 }
+
+
+/* making responsive */
