--- a/src/Components/Offers/Offers.css
+++ b/src/Components/Offers/Offers.css
@@ -12,7 +12,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 50px auto;
+    justify-content: center;
+    margin: 40px auto;
 }
 .left-offer h1{
     color: #171717;
@@ -26,7 +27,7 @@
 }
 .left-offer button{
     width: 250px;
-    height: 60px;
+    /* height: 70px; */
     background-color: #ff4141;
     border-radius:30px;
     border: none;
@@ -35,13 +36,127 @@
     font-weight: 500;
     margin-top:20px;
     cursor: pointer;
-    padding: 20px;
+    padding: 15px 20px; /* Adjust padding */
+    box-sizing: border-box; /* Include padding in width calculation */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
  
-img{
+.right-offer img{
     width: 100%;
     height: 100%;
 }
 
 
 /* making responsive */
+
+@media(max-width:1280px){
+    .offer{
+        padding:0px 80px;
+        margin-bottom: 120px;
+    }
+    .left-offer h1{
+        font-size:40px;
+    }
+    .left-offer p{
+        font-size: 18px;
+    }
+    .right-offer img{
+        width:250px;
+      
+    }
+    .left-offer button{
+        width: 200px;
+        height: 50px;
+        font-size:18px;
+        padding: 0;
+    }
+    .right-offer{
+        padding-top: 30px;
+    }
+}
+
+@media(max-width:1024px){
+    .offer{
+        padding:0px 60px;
+        margin-bottom:80px;
+        height: 40vh;
+    }
+    .left-offer h1{
+        font-size:30px;
+    }
+    .left-offer p{
+        font-size: 16px;
+    }
+    .right-offer img{
+        width:200px;
+      
+    }
+    .left-offer button{
+        width: 160px;
+        height: 40px;
+        font-size:16px;
+        padding: 10px 15px;
+        
+    }
+    .right-offer{
+        padding-top:10px;
+    }
+}
+
+@media(max-width:800px){
+    .offer{
+        margin-bottom:60px;
+       
+    }
+    .left-offer h1{
+        font-size:22px;
+    }
+    .left-offer p{
+        font-size: 13px;
+    }
+    .right-offer img{
+        width:180px;
+      
+    }
+    .left-offer button{
+        width: 120px;
+        height: 30px;
+        font-size:13px;
+       
+        
+    }
+    .right-offer{
+        padding-top:10px;
+    }
+}
+
+@media(max-width:500px){
+    .offer{
+        height: 25vh;
+        margin-top: 120px;
+        margin-bottom: 50px;
+
+    }
+    .left-offer h1{
+        font-size: 15px;
+    }
+    .left-offer p{
+        font-size: 10px;
+    }
+    .right-offer img{
+        width: 120px;
+    }
+    .left-offer button{
+        width: 120px;
+        height: 25px;
+        font-size:10px;
+        margin-top: 12px;
+       
+        
+    }
+    .right-offer{
+        padding-top:10px;
+    }
+}
