--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -14,12 +14,14 @@
 }
   .item img {
     max-width: 100%;
-    max-height: 100%;
+    /* max-height: 100%; */
+    height: auto;
   }
   
 .item-prices{
     display: flex;
     gap: 20px;
+   
 }
 .item-new-price{
     color: #374151;
