--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -62,3 +62,31 @@
     height: 3px;
     background:#c7c7c7;
 }
+
+/* making responsive */
+
+@media(max-width:800px){
+    .footer{
+        gap: 20px;
+    }
+    .footer-logo{
+        gap: 10px;
+        align-items: end;
+    }
+    .footer-logo img{
+        width: 40px;
+    }
+    .footer-logo p{
+        font-size: 20px;
+    }
+    .footer-link{
+        gap: 10px;
+        font-size: 14px;
+    }
+   .footer-social-icon img{
+    width: 22px;
+   }
+   .footer-copyright{
+    font-size: 13px;
+   }
+}
