--- a/src/Pages/CSS/ShopCategory.css
+++ b/src/Pages/CSS/ShopCategory.css
@@ -28,7 +28,7 @@
   }
 
   .shopcategory-products{
-    margin: 30px 160px;
+    margin: 20px 160px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     row-gap: 80px;
@@ -51,4 +51,72 @@
   .shop-category-loadmore:hover{
     background: #ff4141;
     color: bisque;
+    transition: 0.9s;
   }
+
+
+  /* making responsive */
+
+  @media(max-width:1280px){
+    .shop-category-banner{
+      margin: 20px auto;
+      width: 80%;
+    }
+    .shop-category-indexsort{
+      width: 90%;
+      margin: auto;
+    }
+    .shop-category-sort{
+      padding: 5px 10px;
+      font-size: 12px;
+    }
+    .shop-category-sort img{
+      width: 12px;
+    }
+    .shop-category-indexsort p{
+      font-size: 12px;
+    }
+    .shopcategory-products{
+      width: 90%;
+      margin: 10px auto;
+      row-gap: 40px;
+    }
+    .shop-category-loadmore{
+      margin: 100px auto;
+      width: 200px;
+      height: 60px;
+      font-size: 16px;
+    }
+    
+  }
+
+  @media(max-width:1024px){
+    .shopcategory-products{
+      grid-row-gap: 80px; /* Add row gap between items */
+   
+    }
+
+  }
+
+  @media(max-width:800px){
+    .shop-category-banner{
+      width: 95%;
+    }
+    .shopcategory-products{
+      width: 95%;
+    
+    }
+   
+    
+    }
+
+    @media(max-width:500px){
+      .shopcategory-products{
+        
+        grid-template-columns: 1fr 1fr;
+      
+      }
+      .shopcategory-products .item{
+        margin: auto;
+      }
+    }
