--- a/src/Pages/CSS/LoginSignup.css
+++ b/src/Pages/CSS/LoginSignup.css
@@ -14,7 +14,7 @@
     height: 500px;
     margin: auto;
     padding: 40px 60px;
-    /* border: 1px solid red; */
+    
     background: #fff;
 }
 .login-signup-container h1{
@@ -73,6 +73,86 @@
 
 
 
+
+/* Responsive styles */
+
+/* For 1280px screens */
+@media (max-width: 1280px) {
+    .login-signup{
+        padding-top: 50px;
+    }
+    .login-signup-container {
+        width: 90%;
+        max-width: 580px;
+        height: auto;
+        
+    }
+   .login-signup-container h1{
+    font-size: 20px;
+   }
+   .login-signup-feilds{
+    margin-top: 15px;
+    gap: 15px;
+   }
+   .login-signup-feilds input{
+    width: 90%;
+    height: 60px;
+   }
+   .login-signup-container button{
+    width: 100%;
+    font-size: 20px;
+    
+   }
+   .login-signup-login{
+    font-size: 16px;
+   }
+   
+}
+
+/* For 1024px screens */
+@media (max-width: 1024px) {
+    .login-signup {
+        padding-top: 40px;
+    }
+    .login-signup-container {
+        padding: 30px;
+    }
+    .login-signup-container button {
+        width: 100%;
+    }
+}
+
+/* For 800px screens */
+@media (max-width: 800px) {
+    .login-signup{
+        padding-top: 30px;
+    }
+    .login-signup-container {
+        padding: 20px;
+    }
+    .login-signup-container button {
+        height: 60px;
+        font-size: 20px;
+    }
+}
+
+/* For 500px screens */
+@media (max-width: 500px) {
+    .login-signup{
+        padding-top: 20px;
+    }
+    .login-signup-container {
+        padding: 10px;
+    }
+    .login-signup-container button {
+        height: 50px;
+        font-size: 18px;
+    }
+    .login-signup-login {
+        font-size: 16px;
+    }
+
+}
 
 
 
