--- a/src/Components/CartItems/CartItems.css
+++ b/src/Components/CartItems/CartItems.css
@@ -40,6 +40,10 @@
     background: white;
     color: #454545;
     font-weight: 900;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
 }
 
 
@@ -107,3 +111,106 @@
     cursor: pointer;
    
 }
+
+
+/* making responsive */
+
+@media(max-width:1280px){
+    .cart-items{
+    margin: 60px 50px;
+    }
+    .cart-items-format-main{
+        grid-template-columns: 0.5fr 3fr 0.5fr 0.5fr 0.5fr 0.5fr;
+        gap: 20px;
+        padding: 15px 0px;
+        font-size: 15px;
+    }
+    .carticon-product-icon{
+        height:60px;
+    }
+    .cart-items-quantity{
+        width: 40px;
+        height: 30px;
+    }
+    .cart-items-down{
+        margin: 80px 0px;
+        flex-direction: column;
+        gap:60px;
+    }
+    .cart-items-total{
+        margin: 0;
+    }
+    .cart-items-total button{
+        max-width: 250px;
+        height: 45px;
+        font-size: 13px;
+    }
+    .cart-items-promobox{
+        flex-direction: column;
+        width: auto;
+        max-width:400px;
+    }
+    .cart-items-promobox input{
+        width: 100%;
+       
+    }
+    .cart-items-promobox button{
+        width: 120px;
+        margin: 50px auto;
+        
+    }
+}
+
+@media(max-width:800px){
+    .cart-items{
+        margin: 60px 30px;
+    }
+    .cart-items-format-main{
+        font-size: 14px;
+    }
+    .carticon-product-icon{
+        height:50px;
+        width: 50px;
+    }
+    .cart-items-quantity{
+        width: 30px;
+        height: 25px;
+    }
+    .cart-items-down{
+        margin: 80px 0px;
+        gap:50px;
+    }
+    .cart-items-total button{
+        max-width: 200px;
+        height: 40px;
+        font-size: 12px;
+    }
+    .cart-items-promobox{
+        max-width:300px;
+    }
+    .cart-items-promobox button{
+        width: 100px;
+        margin: 30px auto;
+    }
+}
+
+@media(max-width:500px){
+   
+    .cart-items-format-main{
+        display: none;
+        grid-template-columns: 0.5fr 3fr 0.5fr;
+        gap: 10px;
+    }
+  .cart-items-format{
+    display: grid;
+  }
+}
+
+
+
+
+
+
+
+
+
